| Summary: | ASTERISK-23664: Incorrect H264 specification in SDP. | ||
| Reporter: | Guillaume Maudoux (gma) | Labels: | |
| Date Opened: | 2014-04-24 04:17:05 | Date Closed: | 2014-05-13 08:51:28 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_format_attr_h264 |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Small mistake in sprintf format sends erroneous profile-level-id parameter in SDP.
This effectively prevents establishing h264 video or causes one-way video only. (cannot remember, we fixed this a month ago). See attached patch, the fix is trivial. | ||
| Comments: | By: Guillaume Maudoux (gma) 2014-04-24 04:19:09.731-0500 Could not upload as code, no idea where to sign a 'submission license agreement'. By: Rusty Newton (rnewton) 2014-04-25 17:43:42.038-0500 [~gma] You can the code review process on [the wiki page|https://wiki.asterisk.org/wiki/display/AST/Code+Review] linked. It includes information on signing the license agreement (you do that using the link at the top of the JIRA interface that says "Sign a License Agreement") and how to use Reviewboard for peer review. You can press the Enter Feedback or Send Back buttons to change the issue status back once you have signed an agreement, reattached the patch as a contribution and created a reviewboard ticket. Thanks! By: Guillaume Maudoux (gma) 2014-05-12 03:21:06.765-0500 Done. Quite a hassle for six characters, but here it is https://reviewboard.asterisk.org/r/3530/ By: Walter Doekes (wdoekes) 2014-05-13 08:51:28.894-0500 Patch r3530.patch uploaded by Guillaume Maudoux. By: Walter Doekes (wdoekes) 2014-05-13 08:55:30.073-0500 Patch r3530.patch uploaded by Guillaume Maudoux. By: Walter Doekes (wdoekes) 2014-05-13 08:55:30.973-0500 Patch r3530.patch uploaded by Guillaume Maudoux. By: Walter Doekes (wdoekes) 2014-05-13 08:56:32.987-0500 Yes Guillame. It is quite a hassle. So is committing and merging the fixes with the appropriate comments. Thanks for contributing! By: Guillaume Maudoux (gma) 2014-05-13 09:16:41.607-0500 I can see that. According to my emails, you have already spent at least one hour on my two patches. Thanks to you and Rusty Newton for your patience. | ||