h264: Fix H264 SDP payload format.

https://tools.ietf.org/html/rfc3984#section-8.1 says profile-level-id
takes 3 bytes in base16 (6 hex digits).

This fixes video setup in certain cases.

ASTERISK-23664 #close
ASTERISK-23664 #comment Patch r3530.patch uploaded by Guillaume Maudoux.
Review: https://reviewboard.asterisk.org/r/3530/


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/11@413791 65c4cc65-6c06-0410-ace0-fbb531ad65f3